--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/law-book_logo.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/law-book_logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/law-book_logo.jpg">
+    <link rel="manifest" href="%PUBLIC_URL%/law-book_logo.png">
       
     <title>Lexi- Your Own Legal Assistant</title>
   </head>
